feat: 카카오 로그인을 stateless 하게 변경한다 (#51)
* refactor: 기존 state 사용 방식 -> stateless 방식으로 변경

* refactor: 기존 state 사용 방식 -> stateless 방식으로 변경으로 인해 필요 없는 엔드 포인트 삭제

* test: 변경사항 test 수정

* feat: 카카오 측에서 인증 실패시에 반환 하는 에러 처리하는 코드 구현

* test: 카카오 측에서 인증 실패시에 반환 하는 에러 처리하는 테스트 추가

* fix: 주석 제거

* fix: exception 변경